Fix typo in 2024-okr.md

--- a/content/posts/2024-okr.md
+++ b/content/posts/2024-okr.md
@@ -9,7 +9,7 @@ draft: false
 ## 2024年の目標
 2024年の目標はズバリ「Web開発をできるようになる」です。
 
-インフラも半人前なのに何を言っているんだと怒られる気もしますが、この3ヶ月くらいでアプリ側のことも知らないのはまずいと痛感させられました。まず1つ目の理由は、インフラチームのミッションの1つに開発者の生産性を上げるというのがあります。例えば、開発者がデータベースを準備したいと思ったら、インフラチームの対応を待つのではなく、開発者自身で簡単にデータベースを用意できるような仕組みを設けておくなどが挙げられます。ユーザー(開発者)が何を求めているのかわからなければ、開発者の生産性を向上させるのも難しいと思います。どんな場面でもユーザー(開発者)目線に立って仕事をするというのは大事なことだと思います。
+インフラも半人前なのに何を言っているんだと怒られる気もしますが、この3ヶ月くらいでアプリ側のことを全く知らないのはまずいと痛感させられました。まず1つ目の理由は、インフラチームのミッションの1つに開発者の生産性を上げるというのがあります。例えば、開発者がデータベースを準備したいと思ったら、インフラチームの対応を待つのではなく、開発者自身で簡単にデータベースを用意できるような仕組みを設けておくなどが挙げられます。ユーザー(開発者)が何を求めているのかわからなければ、開発者の生産性を向上させるのも難しいと思います。どんな場面でもユーザー(開発者)目線に立って仕事をするというのは大事なことだと思います。
 
 もう1つの理由としては、モニタリングの改善や障害対応などの時に、アプリ側の実装を知っておくと事がスムーズに運ぶというのがあります。基本的にモニタリングの設定はインフラチームが行なっており、適切なアラートを設定するというのは意外と難しいです。この時にインフラだけでなく、アプリ側のことも知っておくと抜け漏れが少なく、より適切な閾値を設定することが可能になると考えています。また、オンコールなども基本的にインフラチームが担っており、緊急対応が必要になってもアプリ側のことだからわかりませんでは困ってしまいます。
 
