Change the 2024 OKR

--- a/content/posts/2024-okr.md
+++ b/content/posts/2024-okr.md
@@ -15,10 +15,8 @@ draft: false
 
 なので今年はWeb開発力をつけるために以下のことに取り組む予定です。
 
-- Progate
-  - Web開発コース(Ruby on Rails)
-  - JavaScript
-  - React
+- Progate Web開発コース(Ruby on Rails)
+- Railsチュートリアル
 - AtCoder
   - 茶色
   - 緑色
